k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-rag-service

spec:
  selector:
    app: enterprise-rag

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
